fix darktheme border color in dark mode

--- a/css/index.css
+++ b/css/index.css
@@ -1377,7 +1377,7 @@ body.dark .footer .bottom-nav__item:hover svg {
     height: 500px;
   }
   body.dark .projects .item:hover {
-    border: 2px solid #FDFFFC;
+    border: 2px solid #474A47;
   }
   body.dark .projects .item__techStack {
     left: 12.5px;
