--- a/styles/scss/themes/dark/_darkTheme.scss
+++ b/styles/scss/themes/dark/_darkTheme.scss
@@ -346,7 +346,7 @@ body.dark {
             .item {
                 height: 500px;
                 &:hover {
-                    border: 2px solid darkTheme.$text-color;
+                    border: 2px solid darkTheme.$container-color;
                 }
     
                 &__techStack {
